HTML,Theme,Core Components

--- a/index.html
+++ b/index.html
@@ -13,8 +13,41 @@
 </head>
 
 <body>
-
+    <h1>My Tech Journey Crossword Puzzle</h1>
+    <div class="content-wrapper">
+        <div class="nav bar">
+            <nav>
+                <ul>
+                    <li>Timer</li>
+                    <li>Hint</li>
+                    <li>Clear</li>
+                </ul>
+            </nav>
+        </div>
+        <div class="clue-container"></div>
+        <div class="grid-container"></div>
+    </div>
 
 </body>
 
+
+
+
 </html>
+
+
+<!-- 
+ACROSS CLUES:
+Adaptability: "Skill of adjusting effectively to new conditions and challenges."
+HTMLCSS: "Markup and styling duo used to create the structure and appearance of web pages."
+JavaScript: "Language for building dynamic, interactive web pages."
+Project Management: "Ability to plan, execute, and close projects efficiently."
+Technical: "Skill related to the practical aspects of engineering and coding."
+
+DOWN CLUES:
+Git: "Version control system for tracking changes in source code during software development."
+Leadership: "Ability to guide and inspire a team towards achieving goals."
+Meticulous: "A trait signifying a keen focus on accuracy and precision."
+PHP: "Server-side scripting language designed for web development, often used in WordPress."
+Python: "Popular programming language known for readability, used in a micro web framework."
+React: "JavaScript library for building user interfaces, particularly single-page applications." -->
