Added timer and nav bar

--- a/index.html
+++ b/index.html
@@ -13,20 +13,36 @@
 </head>
 
 <body>
-    <h1>My Tech Journey Crossword Puzzle</h1>
-    <div class="content-wrapper">
-        <div class="nav bar">
-            <nav>
-                <ul>
-                    <li>Timer</li>
-                    <li>Hint</li>
-                    <li>Clear</li>
-                </ul>
-            </nav>
+    <header>
+        <div class="content-wrapper">
+            <div class="header-text">
+                <h1>XYZZZZ TITLE</h1>
+                <h2>Get to know me a little better!</h2>
+            </div>
+            <div class="header-controls">
+                <div class="timer">
+                    <span id="timer-display">00:00</span>
+                    <!-- <button id="pause-button">Pause</button>
+                <button id="resume-button">Resume</button> -->
+                </div>
+                <nav>
+                    <ul>
+                        <li>Hint</li>
+                        <li>Clear</li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-        <div class="clue-container"></div>
-        <div class="grid-container"></div>
-    </div>
+    </header>
+    <main>
+        <!-- <div class="clue-container">
+            <h2>Container for clue</h2>
+        </div>
+        <div class="grid-container">
+            <h3>container for crossword puzzle</h3>
+        </div> 
+    </div>-->
+    </main>
 
 </body>
 
