--- a/index.html
+++ b/index.html
@@ -11,59 +11,27 @@
     <title>Crossword Puzzle</title>
 
 </head>
+<main>
 
-<body>
-    <header>
-        <div class="content-wrapper">
-            <div class="header-text">
-                <h1>XYZZZZ TITLE</h1>
-                <h2>Get to know me a little better!</h2>
-            </div>
-            <div class="header-controls">
-                <div class="timer">
-                    <span id="timer-display">00:00</span>
-                    <!-- <button id="pause-button">Pause</button>
-                <button id="resume-button">Resume</button> -->
-                </div>
-                <nav>
-                    <ul>
-                        <li>Hint</li>
-                        <li>Clear</li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </header>
-    <main>
-        <!-- <div class="clue-container">
-            <h2>Container for clue</h2>
-        </div>
-        <div class="grid-container">
-            <h3>container for crossword puzzle</h3>
-        </div> 
-    </div>-->
-    </main>
-
+</main>
+<div class="container"></div>
+<script src="script.js"></script>
 </body>
-
-
-
 
 </html>
 
-
 <!-- 
 ACROSS CLUES:
-Adaptability: "Skill of adjusting effectively to new conditions and challenges."
-HTMLCSS: "Markup and styling duo used to create the structure and appearance of web pages."
-JavaScript: "Language for building dynamic, interactive web pages."
-Project Management: "Ability to plan, execute, and close projects efficiently."
-Technical: "Skill related to the practical aspects of engineering and coding."
+Adaptability: Skill of adjusting effectively to new conditions and challenges
+Leadership:Ability to guide and inspire a team towards achieving goals
+Meticulous:A trait signifying a keen focus on accuracy and precision
+Python: Popular programming language known for readability, used in a micro web framework
+Project Management:Ability to plan, execute, and close projects efficiently
 
 DOWN CLUES:
-Git: "Version control system for tracking changes in source code during software development."
-Leadership: "Ability to guide and inspire a team towards achieving goals."
-Meticulous: "A trait signifying a keen focus on accuracy and precision."
-PHP: "Server-side scripting language designed for web development, often used in WordPress."
-Python: "Popular programming language known for readability, used in a micro web framework."
-React: "JavaScript library for building user interfaces, particularly single-page applications." -->
+HTMLCSS: Markup and styling duo used to create the structure and appearance of web pages
+Javascript: Language for building dynamic, interactive web pages.
+React:JavaScript library for building user interfaces, particularly single-page applications
+Design: Skill involving creating aesthetically pleasing and functional products
+Ruby:Language known for its simplicity and productivity, often used with Rails
+ -->
